y.output
State 4 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Function Program
    2        | %empty

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    4 Declaration: Declaration_Body SEMICOLON Declaration
    5            | %empty

    6 Declaration_Body: Identifier COLON INTEGER
    7                 | Identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    8 Identifier: IDENT
    9           | IDENT COMMA Identifier

   10 Statement: Statement Statement_Body SEMICOLON
   11          | Statement_Body SEMICOLON

   12 Statement_Body: Var ASSIGN Expression
   13               | IF Bool_Exp THEN Statement ELSE Statement ENDIF
   14               | IF Bool_Exp THEN Statement ENDIF
   15               | WHILE Bool_Exp BEGINLOOP Statement ENDLOOP
   16               | DO BEGINLOOP Statement ENDLOOP WHILE Bool_Exp
   17               | READ Var
   18               | WRITE Var
   19               | BREAK
   20               | RETURN Expression

   21 Bool_Exp: Relation_And_Expr
   22         | Relation_And_Expr OR Relation_And_Expr

   23 Relation_And_Expr: Relation_Expr
   24                  | Relation_Expr AND Relation_Expr

   25 Relation_Expr: NOT Relation_Expr_Body
   26              | Relation_Expr_Body

   27 Relation_Expr_Body: Expression Comp Expression
   28                   | TRUE
   29                   | FALSE
   30                   | L_PAREN Bool_Exp R_PAREN

   31 Comp: EQ
   32     | NEQ
   33     | LT
   34     | GT
   35     | LTE
   36     | GTE

   37 Expression: Expression_Body
   38           | Expression COMMA Expression_Body
   39           | %empty

   40 Expression_Body: Mult_Expr
   41                | Mult_Expr ADD Expression
   42                | Mult_Expr SUB Expression

   43 Mult_Expr: Term
   44          | Term MULT Mult_Expr
   45          | Term DIV Mult_Expr
   46          | Term MOD Mult_Expr

   47 Term: Term_Body
   48     | SUB Term_Body
   49     | Identifier L_PAREN Expression R_PAREN

   50 Term_Body: Var
   51          | NUMBER
   52          | L_PAREN Expression R_PAREN

   53 Var: Identifier
   54    | Identifier L_SQUARE_BRACKET Expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 3
BEGIN_PARAMS (259) 3
END_PARAMS (260) 3
BEGIN_LOCALS (261) 3
END_LOCALS (262) 3
BEGIN_BODY (263) 3
END_BODY (264) 3
INTEGER (265) 6 7
ARRAY (266) 7
OF (267) 7
IF (268) 13 14
THEN (269) 13 14
ENDIF (270) 13 14
ELSE (271) 13
WHILE (272) 15 16
DO (273) 16
BEGINLOOP (274) 15 16
ENDLOOP (275) 15 16
BREAK (276) 19
READ (277) 17
WRITE (278) 18
AND (279) 24
OR (280) 22
NOT (281) 25
TRUE (282) 28
FALSE (283) 29
RETURN (284) 20
SUB (285) 42 48
ADD (286) 41
MULT (287) 44
DIV (288) 45
MOD (289) 46
EQ (290) 31
NEQ (291) 32
LT (292) 33
GT (293) 34
LTE (294) 35
GTE (295) 36
IDENT (296) 8 9
NUMBER (297) 7 51
SEMICOLON (298) 3 4 10 11
COLON (299) 6 7
COMMA (300) 9 38
L_PAREN (301) 30 49 52
R_PAREN (302) 30 49 52
L_SQUARE_BRACKET (303) 7 54
R_SQUARE_BRACKET (304) 7 54
ASSIGN (305) 12


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1 2, on right: 0 1
Function (53)
    on left: 3, on right: 1
Declaration (54)
    on left: 4 5, on right: 3 4
Declaration_Body (55)
    on left: 6 7, on right: 4
Identifier (56)
    on left: 8 9, on right: 3 6 7 9 49 53 54
Statement (57)
    on left: 10 11, on right: 3 10 13 14 15 16
Statement_Body (58)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
Bool_Exp (59)
    on left: 21 22, on right: 13 14 15 16 30
Relation_And_Expr (60)
    on left: 23 24, on right: 21 22
Relation_Expr (61)
    on left: 25 26, on right: 23 24
Relation_Expr_Body (62)
    on left: 27 28 29 30, on right: 25 26
Comp (63)
    on left: 31 32 33 34 35 36, on right: 27
Expression (64)
    on left: 37 38 39, on right: 12 20 27 38 41 42 49 52 54
Expression_Body (65)
    on left: 40 41 42, on right: 37 38
Mult_Expr (66)
    on left: 43 44 45 46, on right: 40 41 42 44 45 46
Term (67)
    on left: 47 48 49, on right: 43 44 45 46
Term_Body (68)
    on left: 50 51 52, on right: 47 48
Var (69)
    on left: 53 54, on right: 12 17 18 50


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program   go to state 2
    Function  go to state 3


State 1

    3 Function: FUNCTION . Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    IDENT  shift, and go to state 4

    Identifier  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: Function . Program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program   go to state 7
    Function  go to state 3


State 4

    8 Identifier: IDENT .
    9           | IDENT . COMMA Identifier

    COMMA  shift, and go to state 8

    COMMA     [reduce using rule 8 (Identifier)]
    $default  reduce using rule 8 (Identifier)


State 5

    3 Function: FUNCTION Identifier . SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    SEMICOLON  shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    1 Program: Function Program .

    $default  reduce using rule 1 (Program)


State 8

    9 Identifier: IDENT COMMA . Identifier

    IDENT  shift, and go to state 4

    Identifier  go to state 10


State 9

    3 Function: FUNCTION Identifier SEMICOLON . BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    BEGIN_PARAMS  shift, and go to state 11


State 10

    9 Identifier: IDENT COMMA Identifier .

    $default  reduce using rule 9 (Identifier)


State 11

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS . Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration)

    Declaration       go to state 12
    Declaration_Body  go to state 13
    Identifier        go to state 14


State 12

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration . END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    END_PARAMS  shift, and go to state 15


State 13

    4 Declaration: Declaration_Body . SEMICOLON Declaration

    SEMICOLON  shift, and go to state 16


State 14

    6 Declaration_Body: Identifier . COLON INTEGER
    7                 | Identifier . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 17


State 15

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS . BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    BEGIN_LOCALS  shift, and go to state 18


State 16

    4 Declaration: Declaration_Body SEMICOLON . Declaration

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration)

    Declaration       go to state 19
    Declaration_Body  go to state 13
    Identifier        go to state 14


State 17

    6 Declaration_Body: Identifier COLON . INTEGER
    7                 | Identifier COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 20
    ARRAY    shift, and go to state 21


State 18

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS . Declaration END_LOCALS BEGIN_BODY Statement END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declaration)

    Declaration       go to state 22
    Declaration_Body  go to state 13
    Identifier        go to state 14


State 19

    4 Declaration: Declaration_Body SEMICOLON Declaration .

    $default  reduce using rule 4 (Declaration)


State 20

    6 Declaration_Body: Identifier COLON INTEGER .

    $default  reduce using rule 6 (Declaration_Body)


State 21

    7 Declaration_Body: Identifier COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 23


State 22

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration . END_LOCALS BEGIN_BODY Statement END_BODY

    END_LOCALS  shift, and go to state 24


State 23

    7 Declaration_Body: Identifier COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 25


State 24

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS . BEGIN_BODY Statement END_BODY

    BEGIN_BODY  shift, and go to state 26


State 25

    7 Declaration_Body: Identifier COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 27


State 26

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY . Statement END_BODY

    IF      shift, and go to state 28
    WHILE   shift, and go to state 29
    DO      shift, and go to state 30
    BREAK   shift, and go to state 31
    READ    shift, and go to state 32
    WRITE   shift, and go to state 33
    RETURN  shift, and go to state 34
    IDENT   shift, and go to state 4

    Identifier      go to state 35
    Statement       go to state 36
    Statement_Body  go to state 37
    Var             go to state 38


State 27

    7 Declaration_Body: Identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 39


State 28

   13 Statement_Body: IF . Bool_Exp THEN Statement ELSE Statement ENDIF
   14               | IF . Bool_Exp THEN Statement ENDIF

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Bool_Exp            go to state 47
    Relation_And_Expr   go to state 48
    Relation_Expr       go to state 49
    Relation_Expr_Body  go to state 50
    Expression          go to state 51
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 29

   15 Statement_Body: WHILE . Bool_Exp BEGINLOOP Statement ENDLOOP

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Bool_Exp            go to state 57
    Relation_And_Expr   go to state 48
    Relation_Expr       go to state 49
    Relation_Expr_Body  go to state 50
    Expression          go to state 51
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 30

   16 Statement_Body: DO . BEGINLOOP Statement ENDLOOP WHILE Bool_Exp

    BEGINLOOP  shift, and go to state 58


State 31

   19 Statement_Body: BREAK .

    $default  reduce using rule 19 (Statement_Body)


State 32

   17 Statement_Body: READ . Var

    IDENT  shift, and go to state 4

    Identifier  go to state 35
    Var         go to state 59


State 33

   18 Statement_Body: WRITE . Var

    IDENT  shift, and go to state 4

    Identifier  go to state 35
    Var         go to state 60


State 34

   20 Statement_Body: RETURN . Expression

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 62
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 35

   53 Var: Identifier .
   54    | Identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 63

    $default  reduce using rule 53 (Var)


State 36

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement . END_BODY
   10 Statement: Statement . Statement_Body SEMICOLON

    END_BODY  shift, and go to state 64
    IF        shift, and go to state 28
    WHILE     shift, and go to state 29
    DO        shift, and go to state 30
    BREAK     shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    RETURN    shift, and go to state 34
    IDENT     shift, and go to state 4

    Identifier      go to state 35
    Statement_Body  go to state 65
    Var             go to state 38


State 37

   11 Statement: Statement_Body . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 38

   12 Statement_Body: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 67


State 39

    7 Declaration_Body: Identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 68


State 40

   25 Relation_Expr: NOT . Relation_Expr_Body

    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Relation_Expr_Body  go to state 69
    Expression          go to state 51
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 41

   28 Relation_Expr_Body: TRUE .

    $default  reduce using rule 28 (Relation_Expr_Body)


State 42

   29 Relation_Expr_Body: FALSE .

    $default  reduce using rule 29 (Relation_Expr_Body)


State 43

   48 Term: SUB . Term_Body

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    Identifier  go to state 35
    Term_Body   go to state 70
    Var         go to state 56


State 44

   51 Term_Body: NUMBER .

    $default  reduce using rule 51 (Term_Body)


State 45

   30 Relation_Expr_Body: L_PAREN . Bool_Exp R_PAREN
   52 Term_Body: L_PAREN . Expression R_PAREN

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Bool_Exp            go to state 71
    Relation_And_Expr   go to state 48
    Relation_Expr       go to state 49
    Relation_Expr_Body  go to state 50
    Expression          go to state 72
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 46

   49 Term: Identifier . L_PAREN Expression R_PAREN
   53 Var: Identifier .
   54    | Identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 73
    L_SQUARE_BRACKET  shift, and go to state 63

    $default  reduce using rule 53 (Var)


State 47

   13 Statement_Body: IF Bool_Exp . THEN Statement ELSE Statement ENDIF
   14               | IF Bool_Exp . THEN Statement ENDIF

    THEN  shift, and go to state 74


State 48

   21 Bool_Exp: Relation_And_Expr .
   22         | Relation_And_Expr . OR Relation_And_Expr

    OR  shift, and go to state 75

    $default  reduce using rule 21 (Bool_Exp)


State 49

   23 Relation_And_Expr: Relation_Expr .
   24                  | Relation_Expr . AND Relation_Expr

    AND  shift, and go to state 76

    $default  reduce using rule 23 (Relation_And_Expr)


State 50

   26 Relation_Expr: Relation_Expr_Body .

    $default  reduce using rule 26 (Relation_Expr)


State 51

   27 Relation_Expr_Body: Expression . Comp Expression
   38 Expression: Expression . COMMA Expression_Body

    EQ     shift, and go to state 77
    NEQ    shift, and go to state 78
    LT     shift, and go to state 79
    GT     shift, and go to state 80
    LTE    shift, and go to state 81
    GTE    shift, and go to state 82
    COMMA  shift, and go to state 83

    Comp  go to state 84


State 52

   37 Expression: Expression_Body .

    $default  reduce using rule 37 (Expression)


State 53

   40 Expression_Body: Mult_Expr .
   41                | Mult_Expr . ADD Expression
   42                | Mult_Expr . SUB Expression

    SUB  shift, and go to state 85
    ADD  shift, and go to state 86

    $default  reduce using rule 40 (Expression_Body)


State 54

   43 Mult_Expr: Term .
   44          | Term . MULT Mult_Expr
   45          | Term . DIV Mult_Expr
   46          | Term . MOD Mult_Expr

    MULT  shift, and go to state 87
    DIV   shift, and go to state 88
    MOD   shift, and go to state 89

    $default  reduce using rule 43 (Mult_Expr)


State 55

   47 Term: Term_Body .

    $default  reduce using rule 47 (Term)


State 56

   50 Term_Body: Var .

    $default  reduce using rule 50 (Term_Body)


State 57

   15 Statement_Body: WHILE Bool_Exp . BEGINLOOP Statement ENDLOOP

    BEGINLOOP  shift, and go to state 90


State 58

   16 Statement_Body: DO BEGINLOOP . Statement ENDLOOP WHILE Bool_Exp

    IF      shift, and go to state 28
    WHILE   shift, and go to state 29
    DO      shift, and go to state 30
    BREAK   shift, and go to state 31
    READ    shift, and go to state 32
    WRITE   shift, and go to state 33
    RETURN  shift, and go to state 34
    IDENT   shift, and go to state 4

    Identifier      go to state 35
    Statement       go to state 91
    Statement_Body  go to state 37
    Var             go to state 38


State 59

   17 Statement_Body: READ Var .

    $default  reduce using rule 17 (Statement_Body)


State 60

   18 Statement_Body: WRITE Var .

    $default  reduce using rule 18 (Statement_Body)


State 61

   52 Term_Body: L_PAREN . Expression R_PAREN

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 92
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 62

   20 Statement_Body: RETURN Expression .
   38 Expression: Expression . COMMA Expression_Body

    COMMA  shift, and go to state 83

    $default  reduce using rule 20 (Statement_Body)


State 63

   54 Var: Identifier L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 93
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 64

    3 Function: FUNCTION Identifier SEMICOLON BEGIN_PARAMS Declaration END_PARAMS BEGIN_LOCALS Declaration END_LOCALS BEGIN_BODY Statement END_BODY .

    $default  reduce using rule 3 (Function)


State 65

   10 Statement: Statement Statement_Body . SEMICOLON

    SEMICOLON  shift, and go to state 94


State 66

   11 Statement: Statement_Body SEMICOLON .

    $default  reduce using rule 11 (Statement)


State 67

   12 Statement_Body: Var ASSIGN . Expression

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 95
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 68

    7 Declaration_Body: Identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 7 (Declaration_Body)


State 69

   25 Relation_Expr: NOT Relation_Expr_Body .

    $default  reduce using rule 25 (Relation_Expr)


State 70

   48 Term: SUB Term_Body .

    $default  reduce using rule 48 (Term)


State 71

   30 Relation_Expr_Body: L_PAREN Bool_Exp . R_PAREN

    R_PAREN  shift, and go to state 96


State 72

   27 Relation_Expr_Body: Expression . Comp Expression
   38 Expression: Expression . COMMA Expression_Body
   52 Term_Body: L_PAREN Expression . R_PAREN

    EQ       shift, and go to state 77
    NEQ      shift, and go to state 78
    LT       shift, and go to state 79
    GT       shift, and go to state 80
    LTE      shift, and go to state 81
    GTE      shift, and go to state 82
    COMMA    shift, and go to state 83
    R_PAREN  shift, and go to state 97

    Comp  go to state 84


State 73

   49 Term: Identifier L_PAREN . Expression R_PAREN

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 98
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 74

   13 Statement_Body: IF Bool_Exp THEN . Statement ELSE Statement ENDIF
   14               | IF Bool_Exp THEN . Statement ENDIF

    IF      shift, and go to state 28
    WHILE   shift, and go to state 29
    DO      shift, and go to state 30
    BREAK   shift, and go to state 31
    READ    shift, and go to state 32
    WRITE   shift, and go to state 33
    RETURN  shift, and go to state 34
    IDENT   shift, and go to state 4

    Identifier      go to state 35
    Statement       go to state 99
    Statement_Body  go to state 37
    Var             go to state 38


State 75

   22 Bool_Exp: Relation_And_Expr OR . Relation_And_Expr

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Relation_And_Expr   go to state 100
    Relation_Expr       go to state 49
    Relation_Expr_Body  go to state 50
    Expression          go to state 51
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 76

   24 Relation_And_Expr: Relation_Expr AND . Relation_Expr

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 45

    $default  reduce using rule 39 (Expression)

    Identifier          go to state 46
    Relation_Expr       go to state 101
    Relation_Expr_Body  go to state 50
    Expression          go to state 51
    Expression_Body     go to state 52
    Mult_Expr           go to state 53
    Term                go to state 54
    Term_Body           go to state 55
    Var                 go to state 56


State 77

   31 Comp: EQ .

    $default  reduce using rule 31 (Comp)


State 78

   32 Comp: NEQ .

    $default  reduce using rule 32 (Comp)


State 79

   33 Comp: LT .

    $default  reduce using rule 33 (Comp)


State 80

   34 Comp: GT .

    $default  reduce using rule 34 (Comp)


State 81

   35 Comp: LTE .

    $default  reduce using rule 35 (Comp)


State 82

   36 Comp: GTE .

    $default  reduce using rule 36 (Comp)


State 83

   38 Expression: Expression COMMA . Expression_Body

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    Identifier       go to state 46
    Expression_Body  go to state 102
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 84

   27 Relation_Expr_Body: Expression Comp . Expression

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)

    Identifier       go to state 46
    Expression       go to state 103
    Expression_Body  go to state 52
    Mult_Expr        go to state 53
    Term             go to state 54
    Term_Body        go to state 55
    Var              go to state 56


State 85

   42 Expression_Body: Mult_Expr SUB . Expression

    SUB      shift, and go to state 43
    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 44
    L_PAREN  shift, and go to state 61

    $default  reduce using rule 39 (Expression)
